SshUtil: use Integer.valueOf instead of constructor